Fix dark mode form controls. Fix HTMLDOC UM

--- a/css/michaelrsweet.css
+++ b/css/michaelrsweet.css
@@ -604,6 +604,10 @@ div.body dd {
     border-color: #777;
     color: #fff;
   }
+  input, textarea {
+    background: #333;
+    color: #eee;
+  }
 }
 
 /* iPhone/iPod touch overrides */
